# mero-meet

./: .gitignore  DEV-TESTING.md  Makefile  README.md
.github/workflows/: ai-review.yaml  ci.yml
app/: .env.dev-call  .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vercel.json  vite.config.ts
app/scripts/: call-e2e.mjs  copy-mediapipe.mjs  engine-loopback-e2e.mjs
app/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
app/src/call/: CallContext.tsx  CallView.module.css  CallView.tsx  MiniCall.module.css  MiniCall.tsx  icons.tsx
app/src/components/: ChatPanel.module.css  ChatPanel.tsx  DevPanel.module.css  DevPanel.tsx  ThemeToggle.module.css  ThemeToggle.tsx  VideoTile.module.css  VideoTile.tsx
app/src/hooks/: useCall.test.tsx  useCall.ts  useChat.ts  useMeroMeet.ts  useRoomInvite.ts
app/src/lib/: dev.ts  effects.ts  invitation.test.ts  invitation.ts  roster.test.ts  roster.ts  session.test.ts  session.ts  tauri.ts  theme.ts  webrtc.test.ts  webrtc.ts
app/src/pages/: CallPage.module.css  CallPage.tsx  LandingPage.module.css  LandingPage.tsx  LobbyPage.module.css  LobbyPage.tsx  RoomsPage.module.css  RoomsPage.tsx
logic/: Cargo.toml  build-bundle.sh  build.sh  rust-toolchain.toml
logic/src/: lib.rs
scripts/: dev-call.sh  dev-e2e.sh  dev-invite-test.sh  dev-invite.sh  dev-node.sh  dev-node2.sh
turn/: .env.example  .gitignore  Caddyfile  SETUP.md  aws-provision.sh  docker-compose.yml  setup.sh
turn/coturn/: turnserver.conf
turn/cred-service/: server.mjs
workflows/: e2e.yml
