[package]
name = "mero-meet"
description = "Calimero video-call signaling (control plane)"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "1.6.1"
borsh-derive = "1.6.1"
bs58 = "0.5.1"
calimero-sdk = { git = "https://github.com/calimero-network/core.git", tag = "0.11.0-rc.13" }
calimero-storage = { git = "https://github.com/calimero-network/core.git", tag = "0.11.0-rc.13" }
calimero-storage-macros = { git = "https://github.com/calimero-network/core.git", tag = "0.11.0-rc.13" }
thiserror = "1.0.56"

[build-dependencies]
calimero-wasm-abi = { git = "https://github.com/calimero-network/core.git", tag = "0.11.0-rc.13" }
serde_json = "1.0.113"

[dev-dependencies]
# Enables register_crdt_merge + the native mock host so TestHost can drive the
# AccessControl writer-set state under `cargo test`.
calimero-storage = { git = "https://github.com/calimero-network/core.git", tag = "0.11.0-rc.13", features = ["testing"] }

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
